--- a/src/tag/tag.component.scss
+++ b/src/tag/tag.component.scss
@@ -162,7 +162,7 @@
     }
 
     &--info {
-      background-color: use-rgb(n);
+      background-color: use-rgb(button-bg);
     }
   }
 
